# PUB_Estrutura_Projeto_ETL

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflow/: ci.yml
.github/workflows/: ci.yml
app/: main.py
app/Analise/Q_01/: Q_01.sql  Qtd_Colaboradores.csv
app/Analise/SQL/: SELECT_01.SQL  SELECT_02.SQL  SELECT_03.SQL
app/database/: conectdb.py  preparing.py
app/pipeline/: __init__.py  extract.py  load.py  transform.py
data/output/: output.xlsx
docs/: index.md
search/: search_index.json
tests/: __init__.py  test_pipeline.py
